--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
 	<link rel="stylesheet" href="css/all.min.css" />
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	<div class="parallax-window" data-parallax="scroll" data-image-src="img/bg-01.png">
