--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>FWS landing page</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
-	<link rel="stylesheet" href="css/all.min.css" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="all.min.css" />
+	<link rel="stylesheet" href="bootstrap.min.css" />
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -178,8 +178,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/parallax.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="jquery.min.js"></script>
+	<script src="parallax.min.js"></script>
+	<script src="bootstrap.min.js"></script>
 </body>
 </html>
