--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<div class="parallax-window" data-parallax="scroll" data-image-src="img/bg-01.png">
+	<div class="parallax-window" data-parallax="scroll" data-image-src="bg-01.png">
 		<div class="container-fluid">
 			<div class="row tm-brand-row">
 				<div class="col-lg-12">
