--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<a class="read-more">read more<i class="fas fa-arrow-right pl-2"></i></a>
 							</div>
 							<div class="col-lg-6 col-md-8 col-12 mt-lg-5">
-								<img src="img/mountain.png" class="img-fluid" alt="img">
+								<img src="mountain.png" class="img-fluid" alt="img">
 							</div>
 						</div>
 						<div class="row mt-5 d-flex justify-content-center">
@@ -99,7 +99,7 @@
 								<a class="read-more">read more<i class="fas fa-arrow-right pl-2"></i></a>
 							</div>
 							<div class="col-lg-6 col-md-8 col-12">
-								<img src="img/mountain.png" class="img-fluid" alt="img">
+								<img src="mountain.png" class="img-fluid" alt="img">
 							</div>
 						</div>
 						<div class="row mt-5 d-flex justify-content-center">
@@ -123,7 +123,7 @@
 								<a class="read-more">read more<i class="fas fa-arrow-right pl-2"></i></a>
 							</div>
 							<div class="col-lg-6 col-md-8 col-12">
-								<img src="img/mountain.png" class="img-fluid" alt="img">
+								<img src="mountain.png" class="img-fluid" alt="img">
 							</div>
 						</div>
 					</div>
