--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 	<div class="parallax-window" data-parallax="scroll" data-image-src="img/bg-01.png">
 		<div class="container-fluid">
-			<div class="row tm-brand-row">
+			<div class="row">
 				<div class="col-lg-12">
-					<div class="tm-nav">
+					<div class="nav">
 						<nav class="navbar navbar-expand-lg navbar-dark">
 							<div class="d-flex order-0">
 								<a class="navbar-brand mr-3" href="#">fws</a>
