--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 									</li>
 								</ul>
 							</div>
-							<span class="navbar-text text-truncate text-right account-menu order-1 order-md-last text-white"><i
+							<span class="navbar-text text-truncate text-right order-1 order-md-last text-white"><i
 									class="far fa-user-circle pr-1"></i>Account</span>
 						</nav>
 					</div>
